--- a/templates/categories.html
+++ b/templates/categories.html
@@ -9,8 +9,8 @@
         {% for category in categories %}
         <li>
             <div class="collapsible_header">
-                <a href="" class="waves-effect waves-light btn btn_small">Del</a>
-                <a href="" class="waves-effect waves-light btn btn_small blue">Edit</a>
+                <a href="{{url_for('delete_category', category_id = category._id)}}" class="waves-effect waves-light btn btn_small">Del</a>
+                <a href="{{url_for('edit_category', category_id = category._id)}}" class="waves-effect waves-light btn btn_small blue">Edit</a>
                 <div class="col s9 task_header">
                     <strong>{{category.category_name}}</strong> 
                 </div>
@@ -19,5 +19,10 @@
         </li>
         {% endfor %}
     </ul>
+</div>
+<div class="row">
+    <a href="{{url_for('add_category')}}" class="waves-effect waves-light btn">
+        <i class="material-icons right">playlist_add</i>Add Category
+    </a>
 </div>
 {% endblock %}
